# talentco

./: .cursorrules  .gitignore  CURSOR_RULES_MIGRATION.md  TALENTCO_DATA_MODEL_PROGRESS.md  TalentCo_AI_Implementation_Report.md  TalentCo_Agentic_Transformation_Proposal.md
.cursor/: mcp.json
.cursor/rules/: engineering-principles.mdc  terminal-navigation.mdc
.cursor/rules/deployment/: docker-deployment-always.mdc  dockerfile-auto.mdc  railway-auto.mdc
.cursor/rules/python/: package-management-auto.mdc
.cursor/rules/testing/: rollback-strategy-manual.mdc
.cursor/rules/troubleshooting/: systematic-debugging-agent.mdc
api/: .dockerignore  .gitignore  Dockerfile  RAILWAY_DEPLOY.md  README.md  langgraph.json  manage.py  nixpacks.toml  pyproject.toml  railway.json  reset.sh
api/apps/api/: apps.py  urls.py  views.py
api/apps/applications/: models.py  services.py
api/apps/applications/migrations/: 0001_initial.py  0002_remove_application_uniq_profile_opportunity_application_and_more.py
api/apps/core/: apps.py  models.py
api/apps/core/management/commands/: setup_pgvector.py
api/apps/evaluations/: services.py
api/apps/evaluations/migrations/: 0001_initial.py
api/apps/memories/: admin.py
api/apps/memories/migrations/: 0001_initial.py
api/apps/opportunities/: models.py
api/apps/opportunities/migrations/: 0001_initial.py
api/apps/organisations/migrations/: 0001_initial.py
api/apps/profiles/: models.py
api/apps/profiles/migrations/: 0001_initial.py  0002_enable_pgvector_extension.py
api/apps/skills/migrations/: 0001_initial.py
api/apps/testing/: apps.py
api/apps/testing/management/commands/: generate_esg_data.py  review_esg_data.py
api/data/: models.py  validators.py
api/graphs/: agent.py  agent_tools.py  test_agents.py
api/graphs/builders/: __init__.py
api/graphs/nodes/: __init__.py
api/graphs/states/: __init__.py
api/mcps/: talentco_mcp_server.py
api/talentco/: asgi.py  settings.py  urls.py  wsgi.py
docs/: job-platform-frustrations.md  job-types-employment-classifications.md  talentco-apis-notes.md  talentco-website-analysis.md
graph/: pyproject.toml
mcps/: .gitkeep
ui/src/app/: layout.tsx
ui/src/components/: theme-switcher.tsx
ui/src/components/icons/: talentco.tsx
ui/src/components/thread/: index.tsx
ui/src/components/thread/messages/: tool-calls.tsx
ui/src/providers/: Stream.tsx  theme.tsx
