[project]
name = "api"
version = "0.1.0"
description = "LangGraph Agent for TalentCo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "daphne>=4.2.0",
    "django>=5.2.3",
    "django-mem0-client>=0.2.2",
    "django-ninja>=1.4.3",
    "dj-database-url>=2.1.0",
    "langgraph>=0.4.9",
    "langchain-openai>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic-ai-slim[a2a]>=0.3.3",
    "langgraph-cli[inmem]>=0.3.3",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.2",
    "numpy>=2.2.6",
    "colorlog>=6.8.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "geopy>=2.4.1",
    "phonenumbers>=8.13.32"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["talentco*", "apps*", "graphs*"] 