# TalentCo API Python Package Configuration
# Following deployment safety rules for proper dependency management
[project]
name = "api"
version = "0.1.0"
description = "LangGraph Agent for TalentCo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "daphne>=4.2.0",
    "django>=5.2.3",
    "django-mem0-client>=0.2.2",
    "django-environ>=0.11.2",
    "django-cors-headers>=4.5.0",
    "dj-database-url>=2.3.0",
    "whitenoise>=6.8.2",
    "gunicorn>=23.0.0",
    "langchain>=0.3.11",
    "langchain-core>=0.3.26",
    "langchain-openai>=0.2.11",
    "langchain-community>=0.3.10",
    "langgraph>=0.2.65",
    "langgraph-cli>=0.1.71",
    "pgvector>=0.3.2",
    "psycopg2-binary>=2.9.9",
    "pydantic-ai-slim>=0.1.5",
    "geopy>=2.4.1",
    "phonenumbers>=8.13.52",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "colorlog>=6.9.0",
    "python-dotenv>=1.0.1",
    "djangorestframework>=3.15.2",
    "django-ninja>=1.3.0",
    "numpy>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talentco", "apps", "graphs", "tools", "llm", "clients"]

[tool.uv]
dev-dependencies = [] 